...
    <string name="pin_activity_continue_button_text">Continue</string>
    <string name="pin_activity_pin_not_defined_message">Pin value not defined.</string>
    <string name="pin_activity_login_pin_error_message">Could not validate pin. Please try again.</string>
    <string name="pin_activity_register_pin_error_message">Could not register pin. Please try again.</string>
    <string name="pin_activity_current_user_not_found_error_message">No logged in user found.</string>

    <string name="home_activity_add_button_transition_name">btn_add_note</string>
    <string name="home_activity_no_notes_found_message">You don\'t have any notes.</string>
    <string name="home_activity_menu_search_title">Search</string>
    <string name="home_activity_menu_search_hint">Search by title</string>
    <string name="home_activity_menu_logout">Log out</string>
    <string name="home_activity_logout_warning_dialog_title">Log out?</string>
    <string name="home_activity_logout_warning_dialog_message">Are you sure you want to log out?</string>
    <string name="home_activity_logout_warning_dialog_positive_action">Log out</string>
    <string name="home_activity_logout_warning_dialog_negative_action">Cancel</string>
...
    <string name="add_edit_not_dialog_discard_changes_warning_dialog_title">Discard Changes?</string>
    <string name="add_edit_not_dialog_discard_changes_warning_dialog_message">Are you sure you want to discard changes and exit?</string>
    <string name="add_edit_not_dialog_discard_changes_warning_dialog_positive_action">Discard</string>
    <string name="add_edit_not_dialog_discard_changes_warning_dialog_negative_action">Cancel</string>

    <string name="search_dialog_search_error_message">Something went wrong while searching.</string>
    <string name="search_dialog_back_button_content_description">Clicking back button will take user to Home Activity</string>

    <string name="show_dialog_edit_button_text">Edit</string>
    <string name="show_dialog_delete_button_text">Delete</string>
</resources>

