...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/note_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(view) -> viewHolder.onItemClicked(note)}"
...
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aclonica"
                    android:maxLines="1"
                    android:text="@{note.title}"
...
