...
                app:contentInsetStartWithNavigation="0dp"
                app:navigationContentDescription="@string/search_dialog_back_button_content_description"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                app:navigationOnClickListener="@{presenter.backNavigationClick}">

                <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    app:iconifiedByDefault="false"
                    app:query="@{viewModel.lastQuery}"
...
